[package]
name = "botmark"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
# log
log = "0.4"
simple_logger = "5.0.0"
# CLI
clap = { version = "4.5.30", features = ["derive"] }
# Networking
tokio = { version = "1.43.0", features = ["net", "io-util"] }
pumpkin-protocol = { git = "https://github.com/Pumpkin-MC/Pumpkin", package = "pumpkin-protocol", default-features = false, features = ["packets"]}

crossbeam = "0.8.4"
uuid = "1.14.0"